removed old todo comments, added placeholder text to about page

--- a/templates/about.html
+++ b/templates/about.html
@@ -5,8 +5,104 @@
     <section id="content">
         <h1>About Us</h1>
         <p>
-            We like plant. You like plant. So lets plant plants in planters.
+            The goal is to be the most affordable way to grow a new green house. With enough rain and sunshine your
+            plants will be
+            well on their way to success.
+            <br><br>
+            It doesn't have to be that way. If you want to get creative at your local hardware store, head to the
+            farmers market and
+            grab a 4-inch blade (about the size of a regulation glove) and chop up an old cut.
+            <br><br>
+            Where does the money go?
+            <br><br>
+            We are close to finishing up our final design for our concrete pool deck.
+            <br><br>
+            What you see below
+            <br><br>
+            When we began, we thought we were ready to make something just beautiful. We spent days, weeks and months
+            slogging
+            through architectural renderings that revealed a bunch of glass and glass barriers between each frame.
+            <br><br>
+            We cannot stress this enough, we want big things at home, even if they make for an interesting space. We
+            want a larger
+            pool, more artificial flowers, and a cute little dance hall with a number of dance floors.
+            <br><br>
+            As our prototypes get closer, we will say that we're ready to make our actual pool – just need to get some
+            more
+            materials here.
+            <br><br>
+            Here's a breakdown of what we're able to put together for this project...
+            <br><br>
+            A pool design with glass, tile, and steel arches to create a small array of "pits" that reinforce the core
+            walls.
+            <br><br>
+            With 24 h, two doors separating the pool to keep water out of the rooms or the pool outside. They also have
+            two concrete
+            inserts that reinforce different surfaces.
+            <br><br>
+            When we were able to secure the design of the pool in our redesign, we found that in a few places we
+            expected the
+            material to look like a scratchy brown marble. It had to be clear as it was in the shape of the pool deck,
+            so we spent a
+            lot of time working on it. I don't remember if it was an especially big glass pool side of the house or part
+            my job but
+            I remember it very well...
+            <br><br>
+            This pool design is a unique choice in the design process because we have the vision of the pool house, with
+            the design
+            in mind. It all feels very much like a new idea.
+            <br><br>
+            And by the way, this pool house – complete with the water in the pool – is designed with a glass block that
+            doesn't feel
+            so good.
+            <br><br>
+            The tile "O" has been stretched in to allow the floor space to support a large screen TV. This creates
+            "water hole" in
+            the pool. It's a great little structure and great design for our house, with its little glass facade.
+            <br><br>
+            And the pool in the pool is huge – no slabs of the interior. It's also lined with a TV in the front of the
+            pool house so
+            you could fit it inside a pool house.
+            <br><br>
+            The wall of windows that contain the water bottle that will go on the side and are positioned below the
+            streambed on
+            either side.
+            <br><br>
+            The inside of the pool house and the exterior of the pool house make perfect sense because it's hidden under
+            a window,
+            above you. It's just like living in an apartment.
+            <br><br>
+            That part is huge!
+            <br><br>
+            The side walls on the pool house and the side of the pool house make this pool house a great little
+            attraction.
+            <br><br>
+            Dry-Locked Pool is a glass container designed to allow water to enter the house at a slower rate for less
+            effort. It's
+            also perfect for storing fresh vegetables and herbs.
+            <br><br>
+            The full pool house, the full pool house and the side walls can be seen from above.
+            <br><br>
+            And the pool house inside the pool house.
+            <br><br>
+            Now we need a pool and sink.
+            <br><br>
+            It's pretty simple – just fill in the water and let it fill in easily, move it around a bit and then fill in
+            it with
+            water until it runs out of the hole.
+            <br><br>
+            But here's the problem. You have to pour more water than you start pumping out of the hole. If you fill more
+            water than
+            you need to fill it, you're going to have a problem with it.
+            <br><br>
+            Let these pipes run as a pump so they'll run as hot water that they don't need to run up to the top of the
+            reservoir
+            like pumps we used to put deep into the reservoir.
+            <br><br>
+            (I know, I know). We're going to have to cut the water some.
+
         </p>
+        <a href="https://deepai.org/machine-learning-model/text-generator">Text Generated by DeepAI.org</a>
     </section>
 </main>
 
